--- a/web/catalogBuku.xhtml
+++ b/web/catalogBuku.xhtml
@@ -89,15 +89,16 @@
                         </h:form>
                     </p:dialog>                          
                     <div class="row d-flex flex-wrap mx-auto">
-                        <ui:repeat  value="#{bookBean.books}" var="book">
+                        <ui:repeat  value="#{bookBean.booksFiltered}" var="book">
                             <div class="card-custom mx-2 my-2" style="width: 23%; height: 30rem; overflow: hidden;">
 
                                 <div class="card-body d-flex flex-column justify-content-between" style="height: 12rem;">
                                     <h3 class="text-center">#{book.judulBuku}</h3>
-                                    <p class="text-gray ">#{book.penerbit}</p>
-                                    <p class="text-gray">#{book.pengarang}</p>
-                                    <p class="text-gray">#{book.tahunPenerbit}</p>
-                                    <p class="text-gray">#{book.kategori}</p>
+                                    <p class="text-gray ">Judul : #{book.judulBuku}</p>
+                                    <p class="text-gray">Pengarang : #{book.pengarang}</p>
+                                    <p class="text-gray">Tahun Penerbit : #{book.tahunPenerbit}</p>
+                                    <p class="text-gray">Kategori : #{book.kategori}</p>
+                                    <p class="text-gray">Stok : #{book.stok}</p>
 
                                     <h:form class="d-flex justify-content-between align-items-center align-content-center">
                                         <b:commandButton  class="btn btn-custom" value="Pinjam" icon="check" ajax="true" update="@(.editableCarTable) " actionListener="#{bookBean.pinjam(book.idBuku, login_bean.username)}" onclick="ajax:car.edit();
