--- a/web/catalogPinjam.xhtml
+++ b/web/catalogPinjam.xhtml
@@ -88,11 +88,10 @@
 
                                 <div class="card-body d-flex flex-column justify-content-between" style="height: 12rem;">
                                     <h3 class="text-center" >#{peminjam.idPeminjam}</h3>
-                                    <p class="text-gray ">#{peminjam.username}</p>
-                                    <p class="text-gray">#{peminjam.idBuku}</p>
-                                    <p class="text-gray">#{peminjam.status}</p>
-                                    <p class="text-gray">#{peminjam.tglPinjam}</p>
-                                    <p class="text-gray">#{peminjam.tglPengembalian}</p>
+                                    <p class="text-gray ">Nama Peminjam : #{peminjam.username}</p>
+                                    <p class="text-gray">Id Buku : #{peminjam.idBuku}</p>
+                                    <p class="text-gray">Status : #{peminjam.status}</p>
+                                    <p class="text-gray">Tanggal Pinjam : #{peminjam.tglPinjam}</p>
 
                                     <h:form class="d-flex justify-content-between align-items-center align-content-center">
                                         <b:commandButton  class="btn btn-custom" value="Kembalikan" icon="check" ajax="true" update="@(.peminjamTable) " actionListener="#{peminjamBean.pengembalian(peminjam.idPeminjam, peminjam.idBuku)}" onclick="ajax:car.edit();javascript:return false;">
