--- a/web/catalogBuku.xhtml
+++ b/web/catalogBuku.xhtml
@@ -4,7 +4,8 @@
       xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:b="http://bootsfaces.net/ui"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"></link>
     <link type="text/css" rel="stylesheet" 
           href="css/custom.css" />
@@ -101,10 +102,10 @@
                                     <p class="text-gray">Stok : #{book.stok}</p>
 
                                     <h:form class="d-flex justify-content-between align-items-center align-content-center">
-                                        <b:commandButton  class="btn btn-custom" value="Pinjam" icon="check" ajax="true" update="@(.editableCarTable) " actionListener="#{bookBean.pinjam(book.idBuku, login_bean.username)}" onclick="ajax:car.edit();
-                                                        javascript:return false;" oncomplete="PF('pinjam').show()">
-                                        </b:commandButton>    
-
+                                        <b:commandButton  class="btn btn-custom" value="Pinjam" icon="check" ajax="true" update="refresh" oncomplete="PF('pinjam').show()" 
+                                                          actionListener="#{bookBean.pinjam(book.idBuku, login_bean.username)}" onclick="ajax:car.edit();javascript:return false;">
+                                        <f:ajax execute="@this" render="@form" />
+                                        </b:commandButton>   
                                     </h:form>
 
                                 </div>
