--- a/web/catalogPinjam.xhtml
+++ b/web/catalogPinjam.xhtml
@@ -90,7 +90,6 @@
     </p:dialog>
                                    
                     <div class="row d-flex flex-wrap mx-auto">
-
                         <ui:repeat value="#{peminjamBean.getBorrows(login_bean.username)}" var="peminjam" class="peminjamTable">
                             <div class="card-custom mx-2 my-2" style="width: 23%; height: 30rem; overflow: hidden;">
 
@@ -102,7 +101,7 @@
                                     <p class="text-gray">Tanggal Pinjam : #{peminjam.tglPinjam}</p>
 
                                     <h:form class="d-flex justify-content-between align-items-center align-content-center">
-                                        <b:commandButton  class="btn btn-custom" value="Kembalikan" icon="check" ajax="true" update="@(.peminjamTable)" oncomplete="PF('kembalikan').show()" 
+                                        <b:commandButton  class="btn btn-custom" value="Kembalikan" icon="check" ajax="true" update="refresh" oncomplete="PF('kembalikan').show()" 
                                                           actionListener="#{peminjamBean.pengembalian(peminjam.idPeminjam, peminjam.idBuku)}" onclick="ajax:car.edit();javascript:return false;">
                                         <f:ajax execute="@this" render="@form" />
                                         </b:commandButton>    
